kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: payment-service
    namespace: ecommerce
spec:
    selector:
        app: payment-service
    ports:
        - port: 8084
          targetPort: 8084
    type: ClusterIP
